product detail page and logo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,9 @@
     <string name="show_product">Show Products</string>
     <string name="search_products">Search products</string>
     <string name="product_list"> Products </string>
+    <string name="product_detail"> Product Detail</string>
+
+<!--    warning-->
+    <string name="no_products">No Products Available</string>
+    <string name="all_products_added"> All products are added to the database</string>
 </resources>
